--- a/public/mainpage/css/custom.css
+++ b/public/mainpage/css/custom.css
@@ -105,3 +105,8 @@ input[type=range] {
     margin-left: -5px;
     margin-top: -1px;
   }
+  .slideshow-container {
+    width:80%;
+    margin: auto;
+    text-align: center;
+  }
